[package]
name = "green-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["mssql"]
mssql=[]

[dependencies]
once_cell="*"
tiberius = { version = "0.12.1", features = ["chrono", "sql-browser-tokio","rust_decimal"] }
anyhow="*"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util="*"

[dev-dependencies]
tokio-test = "*"